[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/attack_menu/button/not_selected.png" type="Texture" id=1]
[ext_resource path="res://assets/sword.png" type="Texture" id=2]
[ext_resource path="res://interfaces/attack_menu/attack_button.gd" type="Script" id=3]
[ext_resource path="res://assets/attack_menu/power/star3.png" type="Texture" id=4]
[ext_resource path="res://assets/attack_menu/button/selected.png" type="Texture" id=5]

[node name="attack_button" type="TextureButton"]
margin_top = -0.078743
margin_right = 125.0
margin_bottom = 19.9213
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_name" type="Label" parent="."]
margin_left = 23.1847
margin_top = 5.42103
margin_right = 66.1847
margin_bottom = 36.421
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lance
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_icon" type="Sprite" parent="."]
position = Vector2( 14.0597, 10.0698 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="attack_power" type="Sprite" parent="."]
position = Vector2( 84.2983, 10.3464 )
texture = ExtResource( 4 )
